[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ninjam-config-tool"
version = "0.1.0"
authors = [
  { name="zaqito", email="zachary.lebon@outlook.com" },
]
description = "A cross-platform GUI for managing NINJAM server configs."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "psutil>=5.9.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPLv3 License",
    "Operating System :: OS Independent",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio",
]

[project.scripts]
# This creates the system-wide command
ninjam-config-tool = "ninjam_config_tool.main:run"

[tool.setuptools]
package-data = {"ninjam_config_tool" = ["*.cfg"]}